@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2009 Jay Lawson (jaylawson39 at yahoo.com). All rights reserved.
- * Copyright (C) 2013-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2013-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -42,6 +42,7 @@ import megamek.logging.MMLogger;
 import mekhq.campaign.Campaign;
 import mekhq.campaign.parts.Part;
 import mekhq.campaign.personnel.Person;
+import mekhq.campaign.personnel.skills.SkillType;
 import mekhq.utilities.MHQXMLUtility;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
@@ -65,6 +66,7 @@ public class BattleArmorEquipmentPart extends EquipmentPart {
 
     private int trooper;
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public BattleArmorEquipmentPart() {
         this(0, null, -1, 1.0, -1, null);
     }
@@ -137,7 +139,7 @@ public class BattleArmorEquipmentPart extends EquipmentPart {
             if (unit.getEntity().getInternal(trooper) > 0) {
                 unit.getEntity().setInternal(0, trooper);
                 if (!unit.getCrew().isEmpty()) {
-                    Person trooperToRemove = unit.getCrew().get(unit.getCrew().size() - 1);
+                    Person trooperToRemove = unit.getCrew().getLast();
                     if (null != trooperToRemove) {
                         unit.remove(trooperToRemove, true);
                     }
@@ -145,7 +147,7 @@ public class BattleArmorEquipmentPart extends EquipmentPart {
             }
         }
         if (!salvage) {
-            campaign.getWarehouse().removePart(this);
+            getWarehouse().removePart(this);
         }
         setUnit(null);
         equipmentNum = -1;
@@ -178,6 +180,11 @@ public class BattleArmorEquipmentPart extends EquipmentPart {
             return -2;
         }
         return super.getBaseTime();
+    }
+
+    @Override
+    public boolean isRightTechType(String skillType) {
+        return skillType.equals(SkillType.S_TECH_BA);
     }
 
     @Override
