@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2018-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -34,6 +34,7 @@ package mekhq.campaign.personnel.education;
 
 import static java.lang.Math.min;
 
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -51,6 +52,7 @@ import jakarta.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 import megamek.logging.MMLogger;
 import mekhq.MekHQ;
 import mekhq.campaign.Campaign;
+import mekhq.campaign.campaignOptions.CampaignOption;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.enums.education.AcademyType;
 import mekhq.campaign.personnel.enums.education.EducationLevel;
@@ -59,6 +61,7 @@ import mekhq.campaign.personnel.skills.Skill;
 import mekhq.campaign.personnel.skills.SkillType;
 import mekhq.campaign.universe.Faction;
 import mekhq.campaign.universe.Factions;
+import mekhq.campaign.universe.Planet;
 import mekhq.campaign.universe.PlanetarySystem;
 import mekhq.campaign.universe.RandomFactionGenerator;
 import mekhq.campaign.universe.factionHints.FactionHints;
@@ -616,8 +619,7 @@ public class Academy implements Comparable<Academy> {
      * @return the adjusted tuition value as an Integer
      */
     public int getTuitionAdjusted(Person person) {
-        double educationLevel = Math.max(1,
-              getEducationLevel(person) - (EducationLevel.parseToInt(educationLevelMin) / 4));
+        double educationLevel = Math.max(1, getEducationLevel(person) - ((double) educationLevelMin.getLevel() / 4));
 
         return (int) (tuition * educationLevel);
     }
@@ -640,7 +642,7 @@ public class Academy implements Comparable<Academy> {
                                       locationSystems;
 
         Set<String> relevantFactions = new HashSet<>();
-        relevantFactions.add(campaign.getFaction().getShortName());
+        relevantFactions.add(campaign.getPlayerForce().getFaction().getShortName());
         relevantFactions.add(person.getOriginFaction().getShortName());
 
         for (String campus : campuses) {
@@ -671,7 +673,7 @@ public class Academy implements Comparable<Academy> {
         }
 
         Faction originFaction = person.getOriginFaction();
-        Faction campaignFaction = campaign.getFaction();
+        Faction campaignFaction = campaign.getPlayerForce().getFaction();
         FactionHints hints = RandomFactionGenerator.getInstance().getFactionHints();
 
         for (String shortName : factions) {
@@ -702,6 +704,231 @@ public class Academy implements Comparable<Academy> {
     }
 
     /**
+     * Campus-aware variant of {@link #getFilteredFaction(Campaign, Person, List)} that resolves
+     * faction-restricted academy access against the campus system's <em>current</em> controller, applying the
+     * BattleTech-canonical FedCom era rules and a general bidirectional faction-lineage check (#8915).
+     *
+     * <p>The legacy restricted branch denies any combination where the person's origin faction does not
+     * literally equal the system's current controller. That breaks across mergers and splits:
+     * a Lyran-origin character on FedCom-controlled Tharkad in 3050 was denied Nagelring even though the
+     * academy is the same institution and the character has a legitimate institutional connection.</p>
+     *
+     * <p>The new check asks: <em>who owns the academy now, and does this character's nationality support
+     * entry?</em> The "support entry" question is resolved in three ways, in order:</p>
+     *
+     * <ol>
+     *   <li><strong>Direct equality</strong> against the person's effective faction (origin, with a
+     *       birthworld fallback for FC-origin characters in 3068+).</li>
+     *   <li><strong>FedCom era rules</strong> — see {@link #isFedComCompatible(String, String, LocalDate)}
+     *       for the LA / FS / FC matrix across the 3028-3057, 3058-3067, and 3068+ eras.</li>
+     *   <li><strong>General lineage</strong> via {@link Faction#isLineageCompatible(Faction)} — handles
+     *       CGB↔RD, FRR↔RD, WOB↔CS, and any other bidirectional fallBackFactions relationship.</li>
+     * </ol>
+     *
+     * <p>Campaign faction is gated identically — symmetric with origin.</p>
+     *
+     * <p>For non-restricted academies (faction-conflict / reeducation camp / general), the at-war check
+     * is unchanged and runs against the campus's current controllers via the legacy method.</p>
+     *
+     * @param campaign the campaign being played
+     * @param person   the person whose eligibility is being checked
+     * @param campusId the planetary-system id where the academy (or local campus) is located
+     *
+     * @return the faction short name granting access, or {@code null} if no eligible faction exists for
+     *       this person at this campus
+     */
+    public String getFilteredFactionAtCampus(Campaign campaign, Person person, String campusId) {
+        if (campusId == null) {
+            return null;
+        }
+        PlanetarySystem campus = campaign.getSystemById(campusId);
+        if (campus == null) {
+            return null;
+        }
+
+        if (isFactionRestricted) {
+            return getFilteredFactionRestricted(campaign, person, campus);
+        }
+
+        // For non-restricted academies, retain the legacy at-war behavior against current controllers.
+        return getFilteredFaction(campaign, person, campus.getFactions(campaign.getLocalDate()));
+    }
+
+    /**
+     * Restricted-academy access check: for each current controller of the campus, test the person's
+     * effective faction and the campaign faction against direct equality, the FedCom era rules, and the
+     * general lineage walk. Returns the first compatible owner short name, or {@code null} if none match.
+     *
+     * @param campaign the campaign being played (provides today's date)
+     * @param person   the person whose eligibility is being checked
+     * @param campus   the planetary system hosting the academy or local campus
+     *
+     * @return the owner short name granting access, or {@code null} if no current owner is compatible
+     */
+    private String getFilteredFactionRestricted(Campaign campaign, Person person, PlanetarySystem campus) {
+        LocalDate today = campaign.getLocalDate();
+        List<String> currentOwners = campus.getFactions(today);
+        if (currentOwners == null || currentOwners.isEmpty()) {
+            return null;
+        }
+
+        String effectiveOrigin = effectiveFactionFor(person, today);
+        String campaignShort = campaign.getPlayerForce().getFaction().getShortName();
+        Factions factionsRegistry = Factions.getInstance();
+
+        for (String ownerShort : currentOwners) {
+            Faction owner = factionsRegistry.getFaction(ownerShort);
+            if (owner == null) {
+                continue;
+            }
+
+            // Origin checks
+            if (effectiveOrigin != null) {
+                if (effectiveOrigin.equals(ownerShort)) {
+                    return ownerShort;
+                }
+                if (isFedComCompatible(effectiveOrigin, ownerShort, today)) {
+                    return ownerShort;
+                }
+            }
+            Faction originFaction = person.getOriginFaction();
+            // Skip the general lineage walk for FC origin: FC.fallBackFactions = [LA, FS] would match
+            // BOTH Lyran and FedSuns owners regardless of birthworld side, defeating the era rules
+            // and the FC-origin birthworld fallback in effectiveFactionFor. FC's compatibility is
+            // fully described by isFedComCompatible above. Other FedCom codes (LA, FS) are harmless
+            // here because their fallBackFactions are meta-only ([IS]), excluded by isLineageCompatible.
+            if (originFaction != null && !"FC".equals(originFaction.getShortName())
+                      && originFaction.isLineageCompatible(owner)) {
+                return ownerShort;
+            }
+
+            // Campaign-faction checks (same gates, in case the unit's national affiliation grants access
+            // even when the individual character's origin does not — e.g. a Davion merc unit on tour)
+            if (campaignShort != null) {
+                if (campaignShort.equals(ownerShort)) {
+                    return ownerShort;
+                }
+                if (isFedComCompatible(campaignShort, ownerShort, today)) {
+                    return ownerShort;
+                }
+            }
+            Faction campaignFaction = campaign.getPlayerForce().getFaction();
+            if (campaignFaction != null && !"FC".equals(campaignFaction.getShortName())
+                      && campaignFaction.isLineageCompatible(owner)) {
+                return ownerShort;
+            }
+        }
+
+        return null;
+    }
+
+    /**
+     * Returns the faction short name to test against academy owners for this person, applying the
+     * birthworld fallback only for FC-origin characters in the post-FedCom era (3068+). For every other
+     * origin (LA, FS, DC, CC, ...) returns {@code person.getOriginFaction().getShortName()} directly.
+     *
+     * <p>FedCom (FC) ended in 3067. An FC-origin character in 3068+ has no current state to map to;
+     * we infer their post-FedCom alignment from their birthworld:</p>
+     *
+     * <ol>
+     *   <li>Look up the birthworld's faction at the character's birth date (literal owner).</li>
+     *   <li>If that returns a usable LA / FS / other code, use it.</li>
+     *   <li>If it returns FC itself (offers no LA/FS routing) or is empty, fall back to the birthworld's
+     *       <em>current</em> owner — most worlds reverted to their geographic alignment after the
+     *       3057 secession and 3067 dissolution.</li>
+     * </ol>
+     *
+     * @param person the person whose effective faction we want
+     * @param today  the campaign's current date
+     *
+     * @return the effective faction short name, or {@code null} if the person has no origin faction
+     */
+    private static String effectiveFactionFor(Person person, LocalDate today) {
+        Faction origin = person.getOriginFaction();
+        if (origin == null) {
+            return null;
+        }
+        String originShort = origin.getShortName();
+        if (!"FC".equals(originShort) || today.getYear() <= 3067) {
+            return originShort;
+        }
+
+        // FC origin in post-FedCom era: derive effective faction from birthworld.
+        Planet birthPlanet = person.getOriginPlanet();
+        if (birthPlanet == null) {
+            return originShort;
+        }
+        LocalDate birth = person.getDateOfBirth();
+        String fromBirth = firstUsableNonFc(birth == null ? null : birthPlanet.getFactions(birth));
+        if (fromBirth != null) {
+            return fromBirth;
+        }
+        // Fallback: birthworld's current owner (post-split reversion).
+        String fromCurrent = firstUsableNonFc(birthPlanet.getFactions(today));
+        return fromCurrent != null ? fromCurrent : originShort;
+    }
+
+    private static String firstUsableNonFc(List<String> codes) {
+        if (codes == null) {
+            return null;
+        }
+        for (String code : codes) {
+            if (code != null && !"FC".equals(code) && !"ABN".equals(code)) {
+                return code;
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Encodes the BattleTech-canonical FedCom academy access rules. Returns {@code true} only when both
+     * {@code origin} and {@code owner} are members of the FedCom set ({@code LA}, {@code FS}, {@code FC})
+     * and the era allows the cross-faction grant.
+     *
+     * <ul>
+     *   <li><strong>3028-3057</strong> (FedCom proper, before LA secession): every FedCom citizen may
+     *       attend any FedCom academy.</li>
+     *   <li><strong>3058-3067</strong> (LA seceded; Davion half retains FedCom name): Lyran academies
+     *       (owner = LA) admit LA only; FedSuns and FedCom academies (owner = FS or FC) admit LA, FS,
+     *       FC.</li>
+     *   <li><strong>3068+</strong> (Yvonne reverts to "Federated Suns"; FC defunct): each side admits
+     *       only its own. FC-origin characters reach this method via {@link #effectiveFactionFor} which
+     *       has already mapped them to LA or FS through the birthworld fallback.</li>
+     * </ul>
+     *
+     * <p>Returns {@code false} for any combination outside the FedCom set, or when the date and the
+     * specific (owner, origin) pair fall outside the allowed era rules. Direct equality and the general
+     * lineage check are handled separately at the call site.</p>
+     */
+    private static boolean isFedComCompatible(String origin, String owner, LocalDate today) {
+        if (origin == null || owner == null) {
+            return false;
+        }
+        if (!isFedComCode(origin) || !isFedComCode(owner)) {
+            return false;
+        }
+
+        int year = today.getYear();
+        if (year >= 3028 && year <= 3057) {
+            return true; // any FedCom citizen at any FedCom academy
+        }
+        if (year >= 3058 && year <= 3067) {
+            // Lyran academies are LA-only; Davion-side and FedCom-labelled academies still accept all.
+            if ("LA".equals(owner)) {
+                return "LA".equals(origin);
+            }
+            return true;
+        }
+        // 3068+: direct equality only — handled by the equality check at the call site, not here.
+        // Returning false from this method delegates that case to the equality and lineage gates.
+        return false;
+    }
+
+    private static boolean isFedComCode(String code) {
+        return "LA".equals(code) || "FS".equals(code) || "FC".equals(code);
+    }
+
+    /**
      * Checks if a person is qualified to enroll based on their highest education level.
      *
      * @param person The person to check qualification for.
@@ -710,8 +937,7 @@ public class Academy implements Comparable<Academy> {
      *       required, false otherwise.
      */
     public boolean isQualified(Person person) {
-        return EducationLevel.parseToInt(person.getEduHighestEducation()) >=
-                     EducationLevel.parseToInt(educationLevelMin);
+        return person.getEduHighestEducation().getLevel() >= educationLevelMin.getLevel();
     }
 
     /**
@@ -734,9 +960,9 @@ public class Academy implements Comparable<Academy> {
      * @return The education level of the qualification.
      */
     public int getEducationLevel(Person person) {
-        int currentEducationLevel = EducationLevel.parseToInt(person.getEduHighestEducation());
-        int minimumEducationLevel = EducationLevel.parseToInt(educationLevelMin);
-        int maximumEducationLevel = EducationLevel.parseToInt(educationLevelMax);
+        int currentEducationLevel = person.getEduHighestEducation().getLevel();
+        int minimumEducationLevel = educationLevelMin.getLevel();
+        int maximumEducationLevel = educationLevelMax.getLevel();
 
         int educationLevel;
 
@@ -749,13 +975,7 @@ public class Academy implements Comparable<Academy> {
         }
 
         // this probably isn't necessary, but a little insurance goes a long way
-        if (educationLevel > EducationLevel.values().length - 1) {
-            educationLevel = EducationLevel.values().length - 1;
-        } else if (educationLevel < 0) {
-            educationLevel = 0;
-        }
-
-        return educationLevel;
+        return Math.clamp(educationLevel, EducationLevel.MIN_LEVEL, EducationLevel.MAX_LEVEL);
     }
 
     /**
@@ -771,7 +991,7 @@ public class Academy implements Comparable<Academy> {
         if (isReeducationCamp) {
             return RandomFactionGenerator.getInstance()
                          .getFactionHints()
-                         .isAtWarWith(campaign.getFaction(),
+                         .isAtWarWith(campaign.getPlayerForce().getFaction(),
                                Factions.getInstance().getFaction(person.getEduAcademyFaction()),
                                campaign.getLocalDate());
         }
@@ -787,7 +1007,7 @@ public class Academy implements Comparable<Academy> {
         } else {
             return RandomFactionGenerator.getInstance()
                          .getFactionHints()
-                         .isAtWarWith(campaign.getFaction(),
+                         .isAtWarWith(campaign.getPlayerForce().getFaction(),
                                Factions.getInstance().getFaction(person.getEduAcademyFaction()),
                                campaign.getLocalDate());
         }
@@ -843,7 +1063,7 @@ public class Academy implements Comparable<Academy> {
             tooltip.append("<i>").append(description).append("</i><br><br>");
             tooltip.append("<b>").append(resources.getString("curriculum.text")).append("</b><br>");
 
-            Person person = personnel.get(0);
+            Person person = personnel.getFirst();
 
             int educationLevel = 0;
 
@@ -861,10 +1081,10 @@ public class Academy implements Comparable<Academy> {
                     if (skillName.equalsIgnoreCase("xp")) {
                         tooltip.append(skillName.toUpperCase()).append(" (");
 
-                        if (EducationLevel.parseToInt(person.getEduHighestEducation()) >= educationLevel) {
+                        if (person.getEduHighestEducation().getLevel() >= educationLevel) {
                             tooltip.append(resources.getString("nothingToLearn.text")).append(")<br>");
                         } else {
-                            tooltip.append(educationLevel * campaign.getCampaignOptions().getCurriculumXpRate())
+                            tooltip.append(educationLevel * campaign.getCampaignOptions().get(CampaignOption.CURRICULUM_XP_RATE))
                                   .append(")<br>");
                         }
                     } else if (!skillName.equalsIgnoreCase("none")) {
@@ -895,7 +1115,7 @@ public class Academy implements Comparable<Academy> {
 
             // with the skill content resolved, we can move onto the rest of the tooltip
             if (!isLocal && !isHomeSchool) {
-                int targetNumber = campaign.getCampaignOptions().getEntranceExamBaseTargetNumber() - facultySkill;
+                int targetNumber = campaign.getCampaignOptions().get(CampaignOption.ENTRANCE_EXAM_BASE_TARGET_NUMBER) - facultySkill;
                 tooltip.append("<b>")
                       .append(resources.getString("entranceExam.text"))
                       .append("</b> ")
@@ -932,6 +1152,9 @@ public class Academy implements Comparable<Academy> {
             // we need to do a little extra work to get travel time, to cover academies with
             // multiple campuses
             if (!isHomeSchool) {
+                if (destination == null) {
+                    destination = campaign.getCurrentSystem();
+                }
                 int distance = campaign.getSimplifiedTravelTime(destination);
 
                 tooltip.append("<b>").append(resources.getString("distance.text")).append("</b> ");
@@ -943,18 +1166,18 @@ public class Academy implements Comparable<Academy> {
 
             // with travel time out the way, all that's left is to add the last couple of
             // entries
-            if ((isReeducationCamp) && (campaign.getCampaignOptions().isUseReeducationCamps())) {
+            if ((isReeducationCamp) && (campaign.getCampaignOptions().get(CampaignOption.USE_REEDUCATION_CAMPS))) {
                 tooltip.append("<b>").append(resources.getString("reeducation.text")).append("</b> ");
 
                 if (personnel.size() == 1) {
                     if (!Objects.equals(person.getOriginFaction().getShortName(),
-                          campaign.getFaction().getShortName())) {
-                        tooltip.append(campaign.getFaction().getFullName(campaign.getGameYear())).append("<br>");
+                          campaign.getPlayerForce().getFaction().getShortName())) {
+                        tooltip.append(campaign.getPlayerForce().getFaction().getFullName(campaign.getGameYear())).append("<br>");
                     } else {
                         tooltip.append(resources.getString("reeducationNoChange.text")).append("<br>");
                     }
                 } else {
-                    tooltip.append(campaign.getFaction().getFullName(campaign.getGameYear())).append("<br>");
+                    tooltip.append(campaign.getPlayerForce().getFaction().getFullName(campaign.getGameYear())).append("<br>");
                 }
 
                 tooltip.append("<br>");
@@ -971,7 +1194,7 @@ public class Academy implements Comparable<Academy> {
                 tooltip.append("<b>")
                       .append(resources.getString("educationLevel.text"))
                       .append("</b> ")
-                      .append(EducationLevel.fromString(String.valueOf(getEducationLevel(person))))
+                      .append(EducationLevel.fromLevel(getEducationLevel(person)))
                       .append("<br>");
             }
 
@@ -1009,13 +1232,25 @@ public class Academy implements Comparable<Academy> {
             case "artillery" -> SkillType.S_ARTILLERY;
             case "gunnery/battlearmor" -> SkillType.S_GUN_BA;
             case "gunnery/protomek" -> SkillType.S_GUN_PROTO;
+            case "piloting/protomek" -> SkillType.S_PILOT_PROTO;
             case "small arms" -> SkillType.S_SMALL_ARMS;
             case "anti-mek", "climbing" -> SkillType.S_ANTI_MEK;
             case "tech/mek" -> SkillType.S_TECH_MEK;
-            case "tech/mechanic" -> SkillType.S_TECH_MECHANIC;
-            case "tech/aero" -> SkillType.S_TECH_AERO;
+            // "tech/mechanic" and "tech/aero" are retained as pre-0.51 aliases for the renamed skills.
+            case "tech/vehicle", "tech/mechanic" -> SkillType.S_TECH_VEHICLE;
+            case "tech/aerospace", "tech/aero" -> SkillType.S_TECH_AERO;
             case "tech/battlearmor" -> SkillType.S_TECH_BA;
             case "tech/vessel" -> SkillType.S_TECH_VESSEL;
+            case "tech/military" -> SkillType.S_TECH_MILITARY;
+            case "tech/civilian" -> SkillType.S_TECH_CIVILIAN;
+            case "tech/electronic" -> SkillType.S_TECH_ELECTRONIC;
+            case "tech/nuclear" -> SkillType.S_TECH_NUCLEAR;
+            case "tech/aeronautics" -> SkillType.S_TECH_AERONAUTICS;
+            case "tech/mechanical" -> SkillType.S_TECH_MECHANICAL;
+            case "tech/myomer" -> SkillType.S_TECH_MYOMER;
+            case "tech/jets" -> SkillType.S_TECH_JETS;
+            case "tech/weapons" -> SkillType.S_TECH_WEAPONS;
+            case "tech/cybernetics" -> SkillType.S_TECH_CYBERNETICS;
             case "astech" -> SkillType.S_ASTECH;
             case "doctor", "surgery/any" -> SkillType.S_SURGERY;
             case "medtech" -> SkillType.S_MEDTECH;
