@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2025-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -36,8 +36,6 @@ import static megamek.codeUtilities.ObjectUtility.getRandomItem;
 import static megamek.common.compute.Compute.randomInt;
 import static megamek.common.enums.Gender.FEMALE;
 import static megamek.common.enums.Gender.MALE;
-import static mekhq.campaign.Campaign.AdministratorSpecialization.COMMAND;
-import static mekhq.campaign.Campaign.AdministratorSpecialization.HR;
 import static mekhq.utilities.MHQInternationalization.getFormattedTextAt;
 
 import java.util.ArrayList;
@@ -49,6 +47,7 @@ import megamek.common.enums.Gender;
 import megamek.logging.MMLogger;
 import mekhq.campaign.Campaign;
 import mekhq.campaign.campaignOptions.CampaignOptions;
+import mekhq.campaign.campaignOptions.CampaignOption;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.PronounData;
 import mekhq.campaign.personnel.enums.PersonnelStatus;
@@ -116,7 +115,7 @@ public class ComingOfAgeAnnouncement {
 
         if (dialog.getDialogChoice() == SUPPRESS_DIALOG_RESPONSE_INDEX) {
             CampaignOptions campaignOptions = campaign.getCampaignOptions();
-            campaignOptions.setShowLifeEventDialogComingOfAge(false);
+            campaignOptions.set(CampaignOption.SHOW_LIFE_EVENT_DIALOG_COMING_OF_AGE, false);
         }
     }
 
@@ -180,7 +179,10 @@ public class ComingOfAgeAnnouncement {
      */
     private @Nullable Person getSpeaker() {
         Genealogy genealogy = birthdayHaver.getGenealogy();
-        Person commander = campaign.getCommander();
+        Person commander = campaign.getPlayerForce().getHumanResources()
+                                 .getCommander(campaign.getCampaignOptions(),
+                                       campaign.getPlayerForce().isClanForce(),
+                                       campaign.getLocalDate());
 
         if (genealogy == null) {
             LOGGER.debug("No genealogy found for {}. Using fallback speaker.", birthdayHaver.getFullName());
@@ -210,9 +212,9 @@ public class ComingOfAgeAnnouncement {
             return getFallbackSpeaker();
         } else {
             if (commander != null) {
-                if (commander.equals(presentParents.get(0))) {
+                if (commander.equals(presentParents.getFirst())) {
                     speakerType = SpeakerType.OTHER_PARENT;
-                    return presentParents.get(0);
+                    return presentParents.getFirst();
                 } else if ((presentParents.size() > 1) && commander.equals(presentParents.get(1))) {
                     speakerType = SpeakerType.OTHER_PARENT;
                     return presentParents.get(1);
@@ -242,10 +244,16 @@ public class ComingOfAgeAnnouncement {
      * @return the fallback {@link Person} to act as the speaker, or {@code null} if no fallback is available.
      */
     private @Nullable Person getFallbackSpeaker() {
-        Person speaker = campaign.getSeniorAdminPerson(HR);
+        Person speaker = campaign.getPlayerForce().getHumanResources()
+                               .getSeniorAdminPerson(campaign.getCampaignOptions(),
+                                     campaign.getPlayerForce().isClanForce(),
+                                     campaign.getLocalDate());
 
         if (speaker == null) {
-            speaker = campaign.getSeniorAdminPerson(COMMAND);
+            speaker = campaign.getPlayerForce().getHumanResources()
+                            .getSeniorAdminPerson(campaign.getCampaignOptions(),
+                                  campaign.getPlayerForce().isClanForce(),
+                                  campaign.getLocalDate());
         } else {
             return speaker;
         }
