@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2024-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -43,7 +43,6 @@ import java.util.Map;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 
-import megamek.codeUtilities.MathUtility;
 import megamek.logging.MMLogger;
 import mekhq.campaign.Campaign;
 import mekhq.campaign.universe.factionStanding.BatchallFactions;
@@ -106,7 +105,7 @@ public class FameAndInfamyController {
         } catch (Exception e) {
             logger.error("FameAndInfamyController failed to parse contents of 'shortname' in 'data/universe/factions" +
                                ".xml'. Last successfully parsed Faction shortname: {}",
-                  shortnames.get(shortnames.size() - 1));
+                  shortnames.getLast());
             return shortnames;
         }
 
@@ -184,7 +183,7 @@ public class FameAndInfamyController {
      */
     @Deprecated(since = "0.50.07", forRemoval = true)
     public void setFameForFaction(String factionCode, double fame) {
-        fame = MathUtility.clamp(fame, 0.0, 5.0);
+        fame = Math.clamp(fame, 0.0, 5.0);
 
         trackingFactions.put(factionCode, fame);
     }
@@ -201,7 +200,7 @@ public class FameAndInfamyController {
 
         double currentFame = trackingFactions.get(factionCode);
         adjustment = currentFame + adjustment;
-        adjustment = MathUtility.clamp(adjustment, 0.0, 5.0);
+        adjustment = Math.clamp(adjustment, 0.0, 5.0);
 
         trackingFactions.put(factionCode, adjustment);
 
@@ -225,27 +224,5 @@ public class FameAndInfamyController {
             }
         }
         MHQXMLUtility.writeSimpleXMLCloseTag(printWriter, --indent, "fameAndInfamy");
-    }
-
-    /**
-     * Parses the XML {@link NodeList} and updates the fame values for factions in a {@link Campaign}.
-     *
-     * @param nodeList The XML {@link NodeList} containing the faction fame values.
-     * @param campaign The {@link Campaign} object to update with the parsed fame values.
-     */
-    @Deprecated(since = "0.50.07", forRemoval = true)
-    public static void parseFromXML(final NodeList nodeList, Campaign campaign) {
-        FameAndInfamyController fameAndInfamy = campaign.getFameAndInfamy();
-        try {
-            for (int x = 0; x < nodeList.getLength(); x++) {
-                final Node workingNode = nodeList.item(x);
-                if (workingNode.getNodeType() == Node.ELEMENT_NODE) {
-                    double value = Double.parseDouble(workingNode.getTextContent());
-                    fameAndInfamy.setFameForFaction(workingNode.getNodeName(), value);
-                }
-            }
-        } catch (Exception e) {
-            logger.error(e);
-        }
     }
 }
