@@ -32,9 +32,6 @@
  */
 package mekhq.gui.adapter;
 
-import static mekhq.campaign.enums.CampaignTransportType.SHIP_TRANSPORT;
-import static mekhq.campaign.enums.CampaignTransportType.TACTICAL_TRANSPORT;
-import static mekhq.campaign.enums.CampaignTransportType.TOW_TRANSPORT;
 import static mekhq.campaign.force.CombatTeam.recalculateCombatTeams;
 import static mekhq.campaign.force.Formation.COMBAT_TEAM_OVERRIDE_FALSE;
 import static mekhq.campaign.force.Formation.COMBAT_TEAM_OVERRIDE_NONE;
@@ -46,7 +43,15 @@ import static mekhq.campaign.force.FormationType.STANDARD;
 import static mekhq.campaign.force.FormationType.SUPPORT;
 
 import java.awt.event.ActionEvent;
-import java.util.*;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Optional;
+import java.util.StringJoiner;
+import java.util.StringTokenizer;
+import java.util.UUID;
+import java.util.Vector;
 import javax.swing.JMenu;
 import javax.swing.JMenuItem;
 import javax.swing.JOptionPane;
@@ -70,13 +75,13 @@ import mekhq.campaign.events.OrganizationChangedEvent;
 import mekhq.campaign.events.units.UnitChangedEvent;
 import mekhq.campaign.force.CombatTeam;
 import mekhq.campaign.force.Formation;
-import mekhq.campaign.force.FormationType;
 import mekhq.campaign.force.FormationLevel;
+import mekhq.campaign.force.FormationType;
 import mekhq.campaign.log.AssignmentLogger;
-import mekhq.campaign.mission.AtBDynamicScenario;
-import mekhq.campaign.mission.Mission;
-import mekhq.campaign.mission.Scenario;
-import mekhq.campaign.mission.enums.CombatRole;
+import mekhq.campaign.mission.contract.AbstractContract;
+import mekhq.campaign.mission.scenarios.AtBDynamicScenario;
+import mekhq.campaign.mission.scenarios.Scenario;
+import mekhq.campaign.mission.utilities.CombatRole;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.enums.PersonnelRole;
 import mekhq.campaign.unit.HangarSorter;
@@ -86,14 +91,12 @@ import mekhq.gui.CampaignGUI;
 import mekhq.gui.baseComponents.JScrollableMenu;
 import mekhq.gui.dialog.ForceTemplateAssignmentDialog;
 import mekhq.gui.dialog.MarkdownEditorDialog;
+import mekhq.gui.dialog.SupportCarrierDeploymentDialogs;
 import mekhq.gui.dialog.iconDialogs.LayeredFormationIconDialog;
-import mekhq.gui.menus.AssignForceToShipTransportMenu;
-import mekhq.gui.menus.AssignForceToTacticalTransportMenu;
-import mekhq.gui.menus.AssignForceToTowTransportMenu;
 import mekhq.gui.menus.ExportUnitSpriteMenu;
+import mekhq.gui.menus.TransportAssignmentMenus;
 import mekhq.gui.utilities.JMenuHelpers;
 import mekhq.gui.utilities.StaticChecks;
-import mekhq.utilities.MHQInternationalization;
 
 public class TOEMouseAdapter extends JPopupMenuAdapter {
     private static final MMLogger LOGGER = MMLogger.create(TOEMouseAdapter.class);
@@ -237,7 +240,8 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
         Vector<Unit> units = new Vector<>();
 
         if (type.equals(TOEMouseAdapter.FORCE)) {
-            Formation formation = gui.getCampaign().getFormation(Integer.parseInt(forceId));
+            Campaign campaign = gui.getCampaign();
+            Formation formation = campaign.getPlayerForce().getFormation(Integer.parseInt(forceId));
             if (null != formation) {
                 formations.add(formation);
             }
@@ -273,8 +277,8 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
 
         // TODO : eliminate any forces that are descendants of other forces in the
         // vector
-        final Formation singleFormation = formations.isEmpty() ? null : formations.get(0);
-        final Unit singleUnit = units.isEmpty() ? null : units.get(0);
+        final Formation singleFormation = formations.isEmpty() ? null : formations.getFirst();
+        final Unit singleUnit = units.isEmpty() ? null : units.getFirst();
 
         if (command.contains(TOEMouseAdapter.ADD_FORCE)) {
             if (null != singleFormation) {
@@ -287,19 +291,22 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                       "My Lance");
                 if (null != name) {
                     Formation f = new Formation(name);
-                    gui.getCampaign().addFormation(f, singleFormation);
+                    Campaign campaign = gui.getCampaign();
+                    campaign.getPlayerForce().addFormation(f, singleFormation, campaign);
 
                     MekHQ.triggerEvent(new OrganizationChangedEvent(gui.getCampaign(), f));
                 }
             }
         } else if (command.contains(TOEMouseAdapter.ADD_LANCE_TECH)) {
             if (null != singleFormation) {
-                Person tech = gui.getCampaign().getPerson(UUID.fromString(target));
+                Person tech = gui.getCampaign().getPlayerForce().getHumanResources().getPerson(UUID.fromString(target));
                 if (null != tech) {
                     if (singleFormation.getTechID() != null) {
-                        Person oldTech = gui.getCampaign().getPerson(singleFormation.getTechID());
+                        Person oldTech = gui.getCampaign().getPlayerForce().getHumanResources().getPerson(singleFormation.getTechID());
                         oldTech.clearTechUnits();
-                        AssignmentLogger.removedFrom(oldTech, gui.getCampaign().getLocalDate(), singleFormation.getName());
+                        AssignmentLogger.removedFrom(oldTech,
+                              gui.getCampaign().getLocalDate(),
+                              singleFormation.getName());
                     }
                     singleFormation.setTechID(tech.getId());
 
@@ -373,7 +380,9 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
             if (null != singleFormation) {
                 Unit u = gui.getCampaign().getUnit(UUID.fromString(target));
                 if (null != u) {
-                    gui.getCampaign().addUnitToFormation(u, singleFormation.getId());
+                    Campaign campaign = gui.getCampaign();
+                    int id = singleFormation.getId();
+                    campaign.getPlayerForce().addUnitToFormation(u, id, campaign);
                 }
             }
         } else if (command.contains(TOEMouseAdapter.UNDEPLOY_FORCE)) {
@@ -397,6 +406,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     }
                     MekHQ.triggerEvent(new DeploymentChangedEvent(formation, scenario));
                 }
+                SupportCarrierDeploymentDialogs.showStayingHome(gui.getCampaign(), formations, scenario);
             }
         } else if (command.contains(CHANGE_ICON)) {
             if (singleFormation != null) {
@@ -425,7 +435,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
         } else if (command.contains(CHANGE_CAMO)) {
             if (singleFormation != null) {
                 CamoChooserDialog ccd = new CamoChooserDialog(gui.getFrame(),
-                      singleFormation.getCamouflageOrElse(gui.getCampaign().getCamouflage()),
+                      singleFormation.getCamouflageOrElse(gui.getCampaign().getPlayerForce().getCamouflage()),
                       true);
                 if (ccd.showDialog().isCancelled()) {
                     return;
@@ -463,7 +473,8 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
 
             CombatRole combatRole = CombatRole.parseFromString(st.nextToken());
             singleFormation.setCombatRoleInMemory(combatRole);
-            CombatTeam team = gui.getCampaign().getCombatTeamsAsMap().get(singleFormation.getId());
+            Campaign campaign = gui.getCampaign();
+            CombatTeam team = campaign.getPlayerForce().getCombatTeamsAsMap(campaign).get(singleFormation.getId());
             if (team != null) {
                 team.setRole(combatRole);
                 gui.refreshAllTabs();
@@ -522,7 +533,9 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
 
             boolean formationState = singleFormation.isCombatTeam();
             singleFormation.setCombatTeamStatus(!formationState);
-            singleFormation.setOverrideCombatTeam(formationState ? COMBAT_TEAM_OVERRIDE_FALSE : COMBAT_TEAM_OVERRIDE_TRUE);
+            singleFormation.setOverrideCombatTeam(formationState ?
+                                                        COMBAT_TEAM_OVERRIDE_FALSE :
+                                                        COMBAT_TEAM_OVERRIDE_TRUE);
 
             for (Formation childFormation : singleFormation.getAllSubFormations()) {
                 childFormation.setOverrideCombatTeam(COMBAT_TEAM_OVERRIDE_NONE);
@@ -554,10 +567,12 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     clearTransportAssignment(formation.getAllUnits(false));
 
                     for (Formation childFormation : formation.getAllSubFormations()) {
-                        gui.getCampaign().removeFormation(childFormation);
+                        Campaign campaign = gui.getCampaign();
+                        campaign.getPlayerForce().removeFormation(childFormation, campaign);
                     }
 
-                    gui.getCampaign().removeFormation(formation);
+                    Campaign campaign = gui.getCampaign();
+                    campaign.getPlayerForce().removeFormation(formation, campaign);
                 }
             }
 
@@ -568,7 +583,9 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
             }
         } else if (command.contains(TOEMouseAdapter.REMOVE_LANCE_TECH)) {
             if (null != singleFormation && singleFormation.getTechID() != null) {
-                Person oldTech = gui.getCampaign().getPerson(singleFormation.getTechID());
+                Campaign campaign = gui.getCampaign();
+                final UUID id = singleFormation.getTechID();
+                Person oldTech = campaign.getPlayerForce().getHumanResources().getPerson(id);
                 oldTech.clearTechUnits();
 
                 AssignmentLogger.removedFrom(oldTech, gui.getCampaign().getLocalDate(), singleFormation.getName());
@@ -588,9 +605,9 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
             Campaign campaign = gui.getCampaign();
             for (Unit unit : units) {
                 if (null != unit) {
-                    Formation parentFormation = campaign.getFormationFor(unit);
+                    Formation parentFormation = campaign.getPlayerForce().getFormationFor(unit);
                     if (null != parentFormation) {
-                        campaign.removeUnitFromFormation(unit);
+                        campaign.getPlayerForce().removeUnitFromFormation(unit, campaign);
                         if (null != parentFormation.getTechID()) {
                             unit.removeTech();
                         }
@@ -666,7 +683,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     unit.getEntity().setC3iNextUUIDAsString(pos, uuids.get(pos));
                 }
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.NC3)) {
             Vector<String> uuids = new Vector<>();
@@ -685,7 +702,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     unit.getEntity().setNC3NextUUIDAsString(pos, uuids.get(pos));
                 }
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.NOVA_CEWS)) {
             // Nova CEWS shares UUID array infrastructure with Naval C3 (NC3)
@@ -705,44 +722,49 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     unit.getEntity().setNC3NextUUIDAsString(pos, uuids.get(pos));
                 }
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.REMOVE_NETWORK)) {
-            gui.getCampaign().removeUnitsFromNetwork(units);
+            Campaign campaign = gui.getCampaign();
+            campaign.getPlayerForce().removeUnitsFromNetwork(units, campaign.getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.DISBAND_NETWORK)) {
             if (null != singleUnit) {
-                gui.getCampaign().disbandNetworkOf(singleUnit);
+                mekhq.campaign.Campaign campaign = gui.getCampaign();
+                campaign.getPlayerForce().disbandNetworkOf(singleUnit, campaign.getGame());
             }
         } else if (command.contains(TOEMouseAdapter.ADD_NETWORK)) {
-            gui.getCampaign().addUnitsToNetwork(units, target);
+            Campaign campaign = gui.getCampaign();
+            campaign.getPlayerForce().addUnitsToNetwork(units, target, campaign.getGame());
         } else if (command.contains(TOEMouseAdapter.ADD_SLAVES)) {
             for (Unit u : units) {
                 u.getEntity().setC3MasterIsUUIDAsString(target);
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.SET_MM)) {
             for (Unit u : units) {
-                gui.getCampaign().removeUnitsFromC3Master(u);
+                Campaign campaign = gui.getCampaign();
+                campaign.getPlayerForce().removeUnitsFromC3Master(u, campaign.getGame());
                 u.getEntity().setC3MasterIsUUIDAsString(u.getEntity().getC3UUIDAsString());
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.SET_IND_M)) {
             for (Unit u : units) {
                 u.getEntity().setC3MasterIsUUIDAsString(null);
                 u.getEntity().setC3Master(null, true);
-                gui.getCampaign().removeUnitsFromC3Master(u);
+                Campaign campaign = gui.getCampaign();
+                campaign.getPlayerForce().removeUnitsFromC3Master(u, campaign.getGame());
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         } else if (command.contains(TOEMouseAdapter.REMOVE_C3)) {
             for (Unit u : units) {
                 u.getEntity().setC3MasterIsUUIDAsString(null);
                 u.getEntity().setC3Master(null, true);
             }
-            gui.getCampaign().refreshNetworks();
+            gui.getCampaign().getPlayerForce().refreshNetworks(gui.getCampaign().getGame());
             MekHQ.triggerEvent(new NetworkChangedEvent(units));
         }
     }
@@ -801,7 +823,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
         }
         boolean multipleSelection = (forcesSelected && formations.size() > 1) || (unitsSelected && units.size() > 1);
         if (forcesSelected) {
-            Formation formation = formations.get(0);
+            Formation formation = formations.getFirst();
             StringBuilder forceIds = new StringBuilder("" + formation.getId());
             for (int i = 1; i < formations.size(); i++) {
                 forceIds.append('|').append(formations.get(i).getId());
@@ -815,7 +837,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     menu.setEnabled(true);
                     popup.add(menu);
 
-                    Faction faction = gui.getCampaign().getFaction();
+                    Faction faction = gui.getCampaign().getPlayerForce().getFaction();
 
                     for (FormationLevel formationLevel : FormationLevel.values()) {
                         boolean addItem = isAddFormationLevel(formationLevel, faction);
@@ -896,7 +918,13 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     JMenu currentMenu = mekTechs;
 
                     // Get the list of techs, then sort them based on their tech role
-                    List<Person> techList = gui.getCampaign().getTechs();
+                    Campaign campaign = gui.getCampaign();
+                    List<Person> techList = campaign.getPlayerForce()
+                                                  .getHumanResources()
+                                                  .getTechs(campaign.getPlayerForce().getHangar().getUnits(),
+                                                        campaign.getCampaignOptions(),
+                                                        campaign.getPlayerForce().isClanForce(),
+                                                        campaign.getLocalDate());
                     techList.sort((o1, o2) -> {
                         PersonnelRole r1 = o1.getPrimaryRole().isTech() ? o1.getPrimaryRole() : o1.getSecondaryRole();
                         PersonnelRole r2 = o2.getPrimaryRole().isTech() ? o2.getPrimaryRole() : o2.getSecondaryRole();
@@ -1051,7 +1079,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                 // TODO: Or Robotic Systems!
                 JMenu unsorted = new JMenu("Unsorted");
 
-                HangarSorter.weightSorted().forEachUnit(gui.getCampaign().getHangar(), u -> {
+                HangarSorter.weightSorted().forEachUnit(gui.getCampaign().getPlayerForce().getHangar(), u -> {
                     String type = UnitType.getTypeName(u.getEntity().getUnitType());
                     String className = u.getEntity().getWeightClassName();
                     if (null != u.getCommander()) {
@@ -1155,7 +1183,8 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                     menuItem = new JScrollableMenu("setCommanderMenu", "Set Commander");
 
                     for (UUID personID : eligibleCommanders) {
-                        Person person = gui.getCampaign().getPerson(personID);
+                        Campaign campaign = gui.getCampaign();
+                        Person person = campaign.getPlayerForce().getHumanResources().getPerson(personID);
 
                         JMenuItem commanderOption = new JMenuItem(person.getFullTitle() +
                                                                         " (" +
@@ -1234,7 +1263,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
             menu.add(menuItem);
             popup.add(menu);
 
-            if (gui.getCampaign().getCampaignOptions().isUseAtB()) {
+            if (gui.getCampaign().getCampaignOptions().isUseStratCon()) {
                 JMenuItem optionStrategicForceOverride = new JMenuItem((formation.isCombatTeam() ? "Never" : "Always") +
                                                                              " Consider Force a Combat Team");
                 optionStrategicForceOverride.setActionCommand(COMMAND_CHANGE_STRATEGIC_FORCE_OVERRIDE + forceIds);
@@ -1254,7 +1283,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                 menu = new JMenu("Deploy Force");
 
                 JMenu missionMenu;
-                for (final Mission mission : gui.getCampaign().getActiveMissions(true)) {
+                for (final AbstractContract mission : gui.getCampaign().getActiveContracts(true)) {
                     missionMenu = new JMenu(mission.getName());
                     for (final Scenario scenario : mission.getCurrentScenarios()) {
                         if (scenario.isCloaked() || !scenario.canDeployForces(formations, gui.getCampaign())) {
@@ -1308,23 +1337,10 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
             // This checks to see if the ship is in a basic state that can accept units.
             // Capacity gets checked once the action is submitted.
             if (!unitsInForces.isEmpty()) {
-                JMenuHelpers.addMenuIfNonEmpty(popup,
-                      new AssignForceToShipTransportMenu(gui.getCampaign(), new HashSet<>(unitsInForces)));
-                unassignShipTransportMenuClass(unitsInForces, popup);
-                unassignFromShipTransportMenuClass(unitsInForces, popup);
-
-                JMenuHelpers.addMenuIfNonEmpty(popup,
-                      new AssignForceToTacticalTransportMenu(gui.getCampaign(), new HashSet<>(unitsInForces)));
-                unassignTacticalTransportMenuClass(unitsInForces, popup);
-                unassignFromTacticalTransportMenuClass(unitsInForces, popup);
-
-                JMenuHelpers.addMenuIfNonEmpty(popup,
-                      new AssignForceToTowTransportMenu(gui.getCampaign(), new HashSet<>(unitsInForces)));
-                detachFromTractorTransportMenuClass(unitsInForces, popup);
-                detachTrailerTransportMenuClass(unitsInForces, popup);
+                TransportAssignmentMenus.addTransportMenus(gui.getFrame(), popup, gui.getCampaign(), unitsInForces);
             }
         } else if (unitsSelected) {
-            Unit unit = units.get(0);
+            Unit unit = units.getFirst();
             StringBuilder unitIds = new StringBuilder(unit.getId().toString());
             for (int i = 1; i < units.size(); i++) {
                 unitIds.append('|').append(units.get(i).getId().toString());
@@ -1333,7 +1349,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
             JMenu availMenu;
             if (StaticChecks.areAllUnitsC3Slaves(units)) {
                 availMenu = new JMenu("Slave to");
-                for (String[] network : gui.getCampaign().getAvailableC3MastersForSlaves()) {
+                for (String[] network : gui.getCampaign().getPlayerForce().getAvailableC3MastersForSlaves()) {
                     final int nodesFree;
                     try {
                         nodesFree = Integer.parseInt(network[1]);
@@ -1360,7 +1376,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                 menuItem.setEnabled(true);
                 networkMenu.add(menuItem);
                 availMenu = new JMenu("Slave to");
-                for (String[] network : gui.getCampaign().getAvailableC3MastersForMasters()) {
+                for (String[] network : gui.getCampaign().getPlayerForce().getAvailableC3MastersForMasters()) {
                     final int nodesFree;
                     try {
                         nodesFree = Integer.parseInt(network[1]);
@@ -1407,7 +1423,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
 
                 if (StaticChecks.areAllUnitsNotNC3Networked(units)) {
                     availMenu = new JMenu("Add to network");
-                    for (String[] network : gui.getCampaign().getAvailableNC3Networks()) {
+                    for (String[] network : gui.getCampaign().getPlayerForce().getAvailableNC3Networks()) {
                         final int nodesFree;
                         try {
                             nodesFree = Integer.parseInt(network[1]);
@@ -1457,7 +1473,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
 
                 if (StaticChecks.areAllUnitsNotC3iNetworked(units)) {
                     availMenu = new JMenu("Add to network");
-                    for (String[] network : gui.getCampaign().getAvailableC3iNetworks()) {
+                    for (String[] network : gui.getCampaign().getPlayerForce().getAvailableC3iNetworks()) {
                         final int nodesFree;
                         try {
                             nodesFree = Integer.parseInt(network[1]);
@@ -1508,7 +1524,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
 
                 if (StaticChecks.areAllUnitsNotNovaCEWSNetworked(units)) {
                     availMenu = new JMenu("Add to Nova network");
-                    for (String[] network : gui.getCampaign().getAvailableNovaCEWSNetworks()) {
+                    for (String[] network : gui.getCampaign().getPlayerForce().getAvailableNovaCEWSNetworks()) {
                         final int nodesFree;
                         try {
                             nodesFree = Integer.parseInt(network[1]);
@@ -1559,7 +1575,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                 // Deploy unit to a scenario - includes submenus for scenario selection
                 menu = new JMenu("Deploy Unit");
                 JMenu missionMenu;
-                for (final Mission mission : gui.getCampaign().getActiveMissions(true)) {
+                for (final AbstractContract mission : gui.getCampaign().getActiveContracts(true)) {
                     missionMenu = new JMenu(mission.getName());
                     for (final Scenario scenario : mission.getCurrentScenarios()) {
                         if (scenario.isCloaked() || !scenario.canDeployUnits(units, gui.getCampaign())) {
@@ -1602,20 +1618,7 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
                 popup.add(menuItem);
             }
 
-            JMenuHelpers.addMenuIfNonEmpty(popup,
-                  new AssignForceToShipTransportMenu(gui.getCampaign(), new HashSet<>(units)));
-            unassignShipTransportMenuClass(units, popup);
-            unassignFromShipTransportMenuClass(units, popup);
-
-            JMenuHelpers.addMenuIfNonEmpty(popup,
-                  new AssignForceToTacticalTransportMenu(gui.getCampaign(), new HashSet<>(units)));
-            unassignTacticalTransportMenuClass(units, popup);
-            unassignFromTacticalTransportMenuClass(units, popup);
-
-            JMenuHelpers.addMenuIfNonEmpty(popup,
-                  new AssignForceToTowTransportMenu(gui.getCampaign(), new HashSet<>(units)));
-            detachFromTractorTransportMenuClass(units, popup);
-            detachTrailerTransportMenuClass(units, popup);
+            TransportAssignmentMenus.addTransportMenus(gui.getFrame(), popup, gui.getCampaign(), units);
 
             if (!multipleSelection) {
                 popup.add(new ExportUnitSpriteMenu(gui.getFrame(), gui.getCampaign(), unit));
@@ -1699,96 +1702,4 @@ public class TOEMouseAdapter extends JPopupMenuAdapter {
         }
     }
 
-    private void unassignShipTransportMenuClass(Vector<Unit> units, JPopupMenu popup) {
-        if (units.stream().allMatch(Unit::hasTransportShipAssignment) && !StaticChecks.areAnyUnitsDeployed(units)) {
-            JMenuItem menuItem = new JMenuItem(MHQInternationalization.getTextAt(
-                  "mekhq.resources.AssignForceToTransport",
-                  "TOEMouseAdapter.unassign.SHIP_TRANSPORT.text"));
-            menuItem.addActionListener(evt -> unassignTransportAction(SHIP_TRANSPORT, units.toArray(new Unit[0])));
-            menuItem.setEnabled(true);
-            popup.add(menuItem);
-        }
-    }
-
-    private void unassignTacticalTransportMenuClass(Vector<Unit> units, JPopupMenu popup) {
-        if (units.stream().allMatch(Unit::hasTacticalTransportAssignment) && !StaticChecks.areAnyUnitsDeployed(units)) {
-            JMenuItem menuItem = new JMenuItem(MHQInternationalization.getTextAt(
-                  "mekhq.resources.AssignForceToTransport",
-                  "TOEMouseAdapter.unassign.TACTICAL_TRANSPORT.text"));
-            menuItem.addActionListener(evt -> unassignTransportAction(TACTICAL_TRANSPORT, units.toArray(new Unit[0])));
-            menuItem.setEnabled(true);
-            popup.add(menuItem);
-        }
-    }
-
-    private void detachTrailerTransportMenuClass(Vector<Unit> units, JPopupMenu popup) {
-        if (units.stream().allMatch(u -> u.hasTransportedUnits(TOW_TRANSPORT)) &&
-                  !StaticChecks.areAnyUnitsDeployed(units)) {
-            JMenuItem menuItem = new JMenuItem(MHQInternationalization.getTextAt(
-                  "mekhq.resources.AssignForceToTransport",
-                  "TOEMouseAdapter.unassign.TOW_TRANSPORT.text"));
-            menuItem.addActionListener(evt -> unassignTransportAction(TOW_TRANSPORT, units.toArray(new Unit[0])));
-            menuItem.setEnabled(true);
-            popup.add(menuItem);
-        }
-    }
-
-
-    private void unassignTransportAction(CampaignTransportType campaignTransportType, Unit... units) {
-        Set<Unit> transportsToUpdate = new HashSet<>();
-        for (Unit transportedUnit : units) {
-            transportsToUpdate.add(transportedUnit.unloadFromTransport(campaignTransportType));
-            MekHQ.triggerEvent(new UnitChangedEvent(transportedUnit));
-        }
-
-        for (Unit transportToUpdate : transportsToUpdate) {
-            transportToUpdate.initializeTransportSpace(campaignTransportType);
-            gui.getCampaign().updateTransportInTransports(campaignTransportType, transportToUpdate);
-            MekHQ.triggerEvent(new UnitChangedEvent(transportToUpdate));
-        }
-    }
-
-    private void unassignFromTransportAction(CampaignTransportType campaignTransportType, Unit... units) {
-        for (Unit transport : units) {
-            if (transport.hasTransportedUnits(campaignTransportType)) {
-                unassignTransportAction(campaignTransportType,
-                      transport.getTransportedUnits(campaignTransportType).toArray(new Unit[0]));
-            }
-        }
-    }
-
-    private void unassignFromShipTransportMenuClass(Vector<Unit> units, JPopupMenu popup) {
-        if (units.stream().allMatch(Unit::hasShipTransportedUnits) && !StaticChecks.areAnyUnitsDeployed(units)) {
-            JMenuItem menuItem = new JMenuItem(MHQInternationalization.getTextAt(
-                  "mekhq.resources.AssignForceToTransport",
-                  "TOEMouseAdapter.unassignFrom.SHIP_TRANSPORT.text"));
-            menuItem.addActionListener(evt -> unassignFromTransportAction(SHIP_TRANSPORT, units.toArray(new Unit[0])));
-            menuItem.setEnabled(true);
-            popup.add(menuItem);
-        }
-    }
-
-    private void unassignFromTacticalTransportMenuClass(Vector<Unit> units, JPopupMenu popup) {
-        if (units.stream().allMatch(Unit::hasTacticalTransportedUnits) && !StaticChecks.areAnyUnitsDeployed(units)) {
-            JMenuItem menuItem = new JMenuItem(MHQInternationalization.getTextAt(
-                  "mekhq.resources.AssignForceToTransport",
-                  "TOEMouseAdapter.unassignFrom.TACTICAL_TRANSPORT.text"));
-            menuItem.addActionListener(evt -> unassignFromTransportAction(TACTICAL_TRANSPORT,
-                  units.toArray(new Unit[0])));
-            menuItem.setEnabled(true);
-            popup.add(menuItem);
-        }
-    }
-
-    private void detachFromTractorTransportMenuClass(Vector<Unit> units, JPopupMenu popup) {
-        if (units.stream().allMatch(u -> u.hasTransportAssignment(TOW_TRANSPORT)) &&
-                  !StaticChecks.areAnyUnitsDeployed(units)) {
-            JMenuItem menuItem = new JMenuItem(MHQInternationalization.getTextAt(
-                  "mekhq.resources.AssignForceToTransport",
-                  "TOEMouseAdapter.unassignFrom.TOW_TRANSPORT.text"));
-            menuItem.addActionListener(evt -> unassignTransportAction(TOW_TRANSPORT, units.toArray(new Unit[0])));
-            menuItem.setEnabled(true);
-            popup.add(menuItem);
-        }
-    }
 }
