@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2017-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -45,19 +45,12 @@ import java.awt.Insets;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import javax.swing.BorderFactory;
-import javax.swing.ImageIcon;
-import javax.swing.JButton;
-import javax.swing.JDialog;
-import javax.swing.JFrame;
-import javax.swing.JLabel;
-import javax.swing.JPanel;
-import javax.swing.JScrollPane;
-import javax.swing.WindowConstants;
+import javax.swing.*;
 
 import megamek.client.ui.preferences.JWindowPreference;
 import megamek.client.ui.preferences.PreferencesNode;
 import megamek.codeUtilities.StringUtility;
+import megamek.common.ui.FastJScrollPane;
 import megamek.logging.MMLogger;
 import mekhq.MekHQ;
 import mekhq.campaign.events.parts.PartChangedEvent;
@@ -68,9 +61,6 @@ import mekhq.campaign.parts.missing.MissingPart;
 import mekhq.campaign.unit.Unit;
 import mekhq.campaign.work.IAcquisitionWork;
 import mekhq.gui.CampaignGUI;
-import mekhq.gui.RepairTab;
-import mekhq.gui.enums.MHQTabType;
-import mekhq.gui.utilities.JScrollPaneWithSpeed;
 import mekhq.service.PartsAcquisitionService;
 import mekhq.service.PartsAcquisitionService.PartCountInfo;
 import mekhq.utilities.ReportingUtilities;
@@ -134,7 +124,7 @@ public class AcquisitionsDialog extends JDialog {
 
         pnlSummary.firePropertyChange("counts", -1, 0);
 
-        JScrollPane scrollMain = new JScrollPaneWithSpeed(pnlMain);
+        JScrollPane scrollMain = new FastJScrollPane(pnlMain);
         scrollMain.setPreferredSize(new Dimension(700, 500));
 
         content.add(scrollMain, BorderLayout.CENTER);
@@ -154,9 +144,7 @@ public class AcquisitionsDialog extends JDialog {
 
             btnSummary.firePropertyChange("missingCount", -1, PartsAcquisitionService.getMissingCount());
 
-            if (campaignGUI.getTab(MHQTabType.REPAIR_BAY) != null) {
-                ((RepairTab) campaignGUI.getTab(MHQTabType.REPAIR_BAY)).refreshPartsAcquisitionService(false);
-            }
+            campaignGUI.getRepairBayTab().refreshPartsAcquisitionService(false);
         });
 
         GridBagConstraints gbc = new GridBagConstraints();
@@ -292,8 +280,7 @@ public class AcquisitionsDialog extends JDialog {
             }
 
             if (partCountInfo.getMissingCount() > 0) {
-                campaignGUI.getCampaign()
-                      .getShoppingList()
+                campaignGUI.getCampaign().getPlayerForce().getShoppingList()
                       .addShoppingItem(part.getAcquisitionWork(),
                             partCountInfo.getMissingCount(),
                             campaignGUI.getCampaign());
@@ -408,7 +395,7 @@ public class AcquisitionsDialog extends JDialog {
         }
 
         private void initComponents() {
-            targetWork = awList.get(0);
+            targetWork = awList.getFirst();
             part = targetWork.getAcquisitionPart();
 
             partCountInfo = PartsAcquisitionService.getPartCountInfoMap().get(targetWork.getAcquisitionDisplayName());
@@ -517,8 +504,7 @@ public class AcquisitionsDialog extends JDialog {
             btnOrderOne.setToolTipText("Order one item");
             btnOrderOne.setName("btnOrderOne");
             btnOrderOne.addActionListener(ev -> {
-                campaignGUI.getCampaign()
-                      .getShoppingList()
+                campaignGUI.getCampaign().getPlayerForce().getShoppingList()
                       .addShoppingItem(part.getAcquisitionWork(), 1, campaignGUI.getCampaign());
                 refresh();
             });
@@ -529,17 +515,16 @@ public class AcquisitionsDialog extends JDialog {
             btnOrderInBulk.setName("btnOrderInBulk");
             btnOrderInBulk.addActionListener(ev -> {
                 int quantity = 1;
-                PopupValueChoiceDialog pcd = new PopupValueChoiceDialog(campaignGUI.getFrame(),
+                PopupValueChoiceDialog orderCountDialog = new PopupValueChoiceDialog(campaignGUI.getFrame(),
                       true,
                       "How Many " + part.getName() + '?',
                       quantity,
                       1,
                       CampaignGUI.MAX_QUANTITY_SPINNER);
-                pcd.setVisible(true);
-                quantity = pcd.getValue();
-                if (quantity > 0) {
-                    campaignGUI.getCampaign()
-                          .getShoppingList()
+                orderCountDialog.setVisible(true);
+                quantity = orderCountDialog.getValue();
+                if (!orderCountDialog.wasCanceled()) {
+                    campaignGUI.getCampaign().getPlayerForce().getShoppingList()
                           .addShoppingItem(part.getAcquisitionWork(), quantity, campaignGUI.getCampaign());
                     refresh();
                 }
@@ -563,6 +548,30 @@ public class AcquisitionsDialog extends JDialog {
                                       part.isOmniPoddable());
             btnDepod.addActionListener(ev -> {
                 MissingPart podded = part.getMissingPart();
+                if (podded == null) {
+                    // btnDepod is only shown when part.getMissingPart() != null at panel
+                    // construction. If we get here, campaign state changed between build and
+                    // click. Recoverable: capture diagnostics (forwarded to Sentry by MMLogger),
+                    // tell the user, then refresh the view.
+                    IllegalStateException ise = new IllegalStateException(
+                          "AcquisitionsDialog btnDepod: part.getMissingPart() returned null for part " +
+                                part.getName() + " (id=" + part.getId() + ')');
+                    logger.error(ise,
+                          "btnDepod clicked but part.getMissingPart() returned null. " +
+                                "part={} (id={}), omniPodCount={}, missingCount={}, isOmniPoddable={}",
+                          part.getName(),
+                          part.getId(),
+                          partCountInfo.getOmniPodCount(),
+                          partCountInfo.getMissingCount(),
+                          part.isOmniPoddable());
+                    JOptionPane.showMessageDialog(campaignGUI.getFrame(),
+                          "The state of this acquisition changed before the action could complete. " +
+                                "The view will be refreshed; please try again.",
+                          "Acquisition state changed",
+                          JOptionPane.WARNING_MESSAGE);
+                    refresh();
+                    return;
+                }
                 podded.setOmniPodded(true);
                 Part replacement = podded.findReplacement(false);
 
