@@ -38,15 +38,11 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static testUtilities.MHQTestUtilities.mockCampaign;
 
 import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Stream;
-
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 
 import mekhq.campaign.Campaign;
 import mekhq.campaign.GameEffect;
@@ -54,6 +50,10 @@ import mekhq.campaign.personnel.Injury;
 import mekhq.campaign.personnel.InjuryType;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.medical.BodyLocation;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 /**
  * Test class for {@link InjuryTypes}
@@ -63,8 +63,8 @@ class InjuryTypesTest {
     @Test
     void testRegisterAllDoesNotCrash() {
         // Test that registerAll() completes without throwing an exception
-        assertDoesNotThrow(() -> InjuryTypes.registerAll(),
-            "InjuryTypes.registerAll() should not throw an exception");
+        assertDoesNotThrow(InjuryTypes::registerAll,
+              "InjuryTypes.registerAll() should not throw an exception");
     }
 
     @Test
@@ -79,16 +79,16 @@ class InjuryTypesTest {
     }
 
     /**
-     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>.
-     * Permanent injuries that can only reset their recovery timer (or would be replaced by a
-     * different injury type) must not produce any stress effects.
+     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>. Permanent injuries that can
+     * only reset their recovery timer (or would be replaced by a different injury type) must not produce any stress
+     * effects.
      */
     @ParameterizedTest(name = "{0} permanent injury produces no stress effects")
     @MethodSource(value = "permanentInjuryNoStressEffectData")
     void testGenStressEffect_permanentInjuryProducesNoEffects(String injuryName, InjuryType type,
           BodyLocation location, int severity) {
         // Setup
-        Campaign campaign = mock(Campaign.class);
+        Campaign campaign = mockCampaign();
         Person person = mock(Person.class);
         Injury permanentInjury = new Injury(30, injuryName, location, type, severity,
               LocalDate.now(), true);
@@ -113,16 +113,16 @@ class InjuryTypesTest {
     }
 
     /**
-     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>.
-     * Permanent injuries that can worsen within the same type (severity increase) should still
-     * produce worsening effects, but must not reset the recovery timer.
+     * Regression test for <a href="https://github.com/MegaMek/mekhq/issues/7565">#7565</a>. Permanent injuries that can
+     * worsen within the same type (severity increase) should still produce worsening effects, but must not reset the
+     * recovery timer.
      */
     @ParameterizedTest(name = "{0} permanent injury can still worsen but skips timer reset")
     @MethodSource(value = "permanentInjuryCanWorsenData")
     void testGenStressEffect_permanentInjuryCanWorsenButSkipsTimerReset(String injuryName, InjuryType type,
           BodyLocation location, int severity) {
         // Setup
-        Campaign campaign = mock(Campaign.class);
+        Campaign campaign = mockCampaign();
         when(campaign.getLocalDate()).thenReturn(LocalDate.of(3025, 1, 1));
         Person person = mock(Person.class);
         Injury permanentInjury = new Injury(30, injuryName, location, type, severity,
@@ -136,7 +136,7 @@ class InjuryTypesTest {
               injuryName + " is permanent but should still produce worsening effects");
         assertEquals(1, effects.size(),
               injuryName + " should produce exactly 1 effect (worsening only, no timer reset)");
-        assertFalse(effects.get(0).desc().contains("recovery timer"),
+        assertFalse(effects.getFirst().desc().contains("recovery timer"),
               injuryName + " permanent injury should not have a recovery timer reset effect");
     }
 
